packages/quickbooks-core/main/default/objects/Payment__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <label>Payment Method</label>
    <length>100</length>
    <type>Text</type>
</CustomField>