packages/quickbooks-core/main/default/objects/Payment__c/fields/QuickBooks_Customer_Email__c.field-meta.xml
<CustomField>
    <fullName>QuickBooks_Customer_Email__c</fullName>
    <description>Customer email from QuickBooks, captured from the CustomerRef when payment is synced</description>
    <label>QuickBooks Customer Email</label>
    <type>Email</type>
</CustomField>