packages/quickbooks-core/main/default/objects/Payment__c/fields/QuickBooks_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>QuickBooks_Customer_Name__c</fullName>
    <description>Customer display name from QuickBooks CustomerRef.name</description>
    <label>QuickBooks Customer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>