packages/quickbooks-core/main/default/objects/Payment__c/fields/QuickBooks_Deposit_Account__c.field-meta.xml
<CustomField>
    <fullName>QuickBooks_Deposit_Account__c</fullName>
    <description>QuickBooks Deposit Account ID from DepositToAccountRef.value</description>
    <label>QuickBooks Deposit Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>