packages/quickbooks-core/main/default/objects/Payment__c/fields/QuickBooks_Payment_Id__c.field-meta.xml
<CustomField>
    <fullName>QuickBooks_Payment_Id__c</fullName>
    <externalId>true</externalId>
    <label>QuickBooks Payment ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>