packages/quickbooks-core/main/default/objects/Payment__c/fields/QuickBooks_Raw_Response__c.field-meta.xml
<CustomField>
    <fullName>QuickBooks_Raw_Response__c</fullName>
    <description>Full JSON response from QuickBooks for debugging and custom parsing</description>
    <label>QuickBooks Raw Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>